Fix typo in device name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta charset="utf-8" />
-  <title>BalenaBLE</title>
+  <title>balenaBLE</title>
   <link rel="stylesheet" href="style.css" />
   <script src="ble-client.js"></script>
   <body>
